[Update] Added new job experience
- Deleted old jobs
- Made grammar and visual adjustments
- Added new job experience

--- a/resume.tex
+++ b/resume.tex
@@ -70,14 +70,15 @@
 %-----------EXPERIENCE-----------%
 \input{src/experience}
 
-%-----------VOLUNTEER-----------%
-\input{src/volunteer}
-
 %-----------PROJECTS-----------%
 \input{src/projects}
 
+%-----------VOLUNTEER-----------%
+\input{src/volunteer}
+
+
 %-----------SKILLS-----------%
-\input{src/skills.tex}
+\input{src/skills}
 
 %-------------------------------------------%
 \end{document}
