--- a/src/experience.tex
+++ b/src/experience.tex
@@ -1,15 +1,15 @@
-%-----------EXPERIENCE-----------%
 \section{Work Experience}
 \resumeSubHeadingListStart
 \vspace{5pt}
     \resumeSubheading
-    {Harveys}{December 2021 -- Present}
-    {All-Rounder}{Pickering, Ontario}
+    {Durham College}{May 2024 -- Present}
+    {Student Associate -- Computer Commons}{Oshawa, Ontario}
     \resumeItemListStart
-        \resumeItem{Strong multitasking abilities, capable of handling multiple orders simultaneously under pressure with a positive attitude.}
-        \resumeItem{Demonstrated extensive menu knowledge and provided exceptional customer service.}
-        \resumeItem{Collaborative team player, able to communicate effectively with kitchen staff and front-of-house team members.}
+        \resumeItem{Performed routine printer maintenance and troubleshooting to ensure consistent printing operations for students and staff.}
+        \resumeItem{Managed IT assets using Cherwell, updating records and communicating effectively with clients regarding asset status and updates.}
+        \resumeItem{Reimaged and deployed laptops to support academic and administrative activities, adhering to IT standards and protocols.}
+        \resumeItem{Provided technical assistance to students, resolving printing issues and offering guidance on campus resources and IT services.}
+        \resumeItem{Coordinated the secure transportation of IT assets between Durham College and Ontario Tech University, maintaining inventory accuracy.}
     \resumeItemListEnd
-    \vspace{5pt}
+\vspace{5pt}
 \resumeSubHeadingListEnd
-
