--- a/src/heading.tex
+++ b/src/heading.tex
@@ -1,7 +1,8 @@
 %----------HEADING----------%
 \begin{center}
-    \textbf{\Huge \scshape Kaitlin Penaranda} \\  \vspace{10pt} 
-    \vspace{5pt}
+    \textbf{\Huge \scshape Kaitlin Penaranda} \\
+    \vspace{2pt}
+    Pickering, Ontario, Canada \\ \vspace{2pt}
     \href{https://github.com/Saecres}{\seticon{faGithub} \underline{github.com/saecres}}
     \seticon{faPhone} \ \small 289-980-5352 \quad
     \href{mailto:kaitlingracep04@gmail.com}{\seticon{faEnvelope} \underline{kaitlingracep04@gmail.com}} \quad
