--- a/src/projects.tex
+++ b/src/projects.tex
@@ -1,21 +1,20 @@
 %-----------PROJECTS-----------%
 \section{Projects}
 \resumeSubHeadingListStart
-
+    \vspace{1pt}
+    \resumeProjectHeading
+    {\textbf{Durak} $|$  \emph{C\#, Unity}}{}
+        \vspace{2pt}
+    \resumeItemListStart
+        \resumeItem{Engineered features like character selection, custom deck and wallpaper designs, interactive loading screens, and dynamic tooltips to elevate user engagement.}
+        \resumeItem{Orchestrated GitHub repository workflows, optimizing version control, pull requests, and issue resolution.}
+    \resumeItemListEnd
     \resumeProjectHeading
     {\textbf{Timezone Converter} $|$ \emph{Python}}    {}
         \vspace{2pt}
     \resumeItemListStart
         \resumeItem {Developed a timezone converter application using Python, allowing users to convert different time zones easily.}
         \resumeItem{Designed with a user-friendly interface and intuitive navigation, ensuring seamless use for all users.}
-    \resumeItemListEnd
-    \vspace{1pt}
-    \resumeProjectHeading
-    {\textbf{HST Calculator} $|$  \emph{Python}}{}
-        \vspace{2pt}
-    \resumeItemListStart
-        \resumeItem{Designed and implemented accurate calculations for all applicable HST rates.}
-        \resumeItem{Created a user-friendly interface to simplify HST calculations and improve user experience.}
     \resumeItemListEnd
     \vspace{5pt}
 
