--- a/src/skills.tex
+++ b/src/skills.tex
@@ -3,12 +3,12 @@
     \begin{itemize}[leftmargin=0.15in, label={}]
 	\small{\item{
      \vspace{5pt}
-		\textbf{Languages}{: Java, JavaScript, SQL, TypeScript, C\#, Python, HTML, CSS, Cobol, PHP} \\
+		\textbf{Languages}{: Java, JavaScript, SQL, TypeScript, C\#, Python, HTML/CSS, Cobol, PHP} \\
       \vspace{3pt}
-		\textbf{Developer Tool}{: SQL Server, VS Code, AWS, PyCharm, Eclipse, Visual Studio, IBM Developer, Vista TN3270, Webstorm, } \\
+		\textbf{Developer Tool}{:VS Code, AWS, Eclipse, Visual Studio, IBM Developer, Vista TN3270, WebStorm, Unity, PostgreSQL} \\
       \vspace{3pt}
-		\textbf{Technologies/Frameworks}{: Bootstrap, jQuery, GitHub, Linux}
+		\textbf{Technologies/Frameworks}{: Bootstrap, jQuery, GitHub, Linux, 11ty, GhostCMS, Next.js, MongoDB}
 	}} \\
- \vspace{50pt}
+ \vspace{30pt}
  \centering \textbf{References available upon request}
     \end{itemize}\textbf
