[Update] Education/Skills
- Reformatted education to include the duration
- Removed "References available upon request"
- Moved technical skills above education

--- a/src/education.tex
+++ b/src/education.tex
@@ -3,8 +3,8 @@
     \resumeSubHeadingListStart
     \vspace{5pt}
     \resumeSubheading
-    {Durham College}{Expected April 2025}
-    {Computer Programming and Analysis (GPA: 4.75 / 5.00)}{Oshawa, Ontario}
+    {Durham College}{September 2022 - Present}
+    {Computer Programming and Analysis - Advanced Diploma}{Oshawa, Ontario}
     \resumeItemListStart
          \vspace{5pt}
         \resumeItem{\textbf{Relevant Coursework:}  Object-Oriented Programming (C\#, Java), Software Testing, Web Development, Database Development, System Development}
